add swagger docs to post controller
